--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".QuizActivity">
 
     <TextView
@@ -23,21 +24,127 @@
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:fillViewport="false"
         android:padding="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/timer">
+        app:layout_constraintTop_toBottomOf="@+id/timer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/scrolllayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="match_parent"
+            android:paddingBottom="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/scrollView">
+
+            <ImageView
+                android:id="@+id/togekiss"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/togekiss" />
+
+            <Button
+                android:id="@+id/q1c1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q1c1"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/togekiss" />
+
+            <Button
+                android:id="@+id/q1c2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q1c2"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/q1c1" />
+
+            <Button
+                android:id="@+id/q1c3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q1c3"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/q1c2" />
+
+            <Button
+                android:id="@+id/q1c4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q1c4"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/q1c3" />
 
 
+            <ImageView
+                android:id="@+id/empoleon"
+                android:layout_width="match_parent"
+                android:layout_height="430dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="100dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/empoleon"
+                app:layout_constraintHeight_percent="10"
+                app:layout_constraintTop_toBottomOf="@+id/q1c4" />
 
+            <Button
+                android:id="@+id/q2c1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q2c1"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/empoleon" />
+
+            <Button
+                android:id="@+id/q2c2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q2c2"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/q2c1" />
+
+            <Button
+                android:id="@+id/q2c3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q2c3"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/q2c2" />
+
+            <Button
+                android:id="@+id/q2c4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
+                android:padding="15dp"
+                android:text="@string/q2c4"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/q2c3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
