--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -25,6 +25,7 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="false"
         android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@+id/timer"
@@ -34,6 +35,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/scrolllayout"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:paddingBottom="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/scrollView">
@@ -145,6 +147,17 @@
                 android:text="@string/q2c4"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@+id/q2c3" />
+
+            <Button
+                android:id="@+id/finished"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="@string/finished"
+                android:padding="20dp"
+                android:textColor="#6C4DA7"
+                android:textSize="25sp"
+                app:layout_constraintTop_toBottomOf="@+id/q2c4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
