--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -48,5 +48,18 @@
         app:layout_constraintRight_toLeftOf="@+id/Rguideline"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
+    <Button
+        android:id="@+id/restartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/restart"
+        android:fontFamily="monospace"
+        android:textColor="#3F51B5"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stats" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
